RESOLVED FIXED174468
Web Inspector: overlay page highlight doesn't disappear when a page is constantly updating
https://bugs.webkit.org/show_bug.cgi?id=174468
Summary Web Inspector: overlay page highlight doesn't disappear when a page is consta...
Devin Rousso
Reported 2017-07-13 11:16:36 PDT
* Reproduction: var log = document.body.appendChild(document.createElement("div")); function frame(timestamp) { log.textContent = Date.now(); window.requestAnimationFrame(frame); } window.requestAnimationFrame(frame); * Steps to reproduce: 1. Open elements tab on "about:blank" 2. Paste above code into console 3. Highlight <div> 4. Move mouse off of DOM tree => Page is still highlighted
Attachments
Patch (1.72 KB, patch)
2017-07-13 11:37 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2017-07-13 11:37:15 PDT
Blaze Burg
Comment 2 2017-07-13 12:07:51 PDT
Comment on attachment 315363 [details] Patch Nice catch!
WebKit Commit Bot
Comment 3 2017-07-17 19:00:53 PDT
Comment on attachment 315363 [details] Patch Clearing flags on attachment: 315363 Committed r219596: <http://trac.webkit.org/changeset/219596>
WebKit Commit Bot
Comment 4 2017-07-17 19:00:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.