Web Inspector: overlay page highlight doesn't disappear when a page is constantly updating https://bugs.webkit.org/show_bug.cgi?id=174468

Reviewed by Simon Fraser.

Do not allow the PageOverlay to start another fade animation of the same type if one has
already started. As an example, if the PageOverlay is fading out, startFadeOutAnimation
should just return.

* page/PageOverlay.cpp:
(WebCore::PageOverlay::startFadeInAnimation):
(WebCore::PageOverlay::startFadeOutAnimation):


Canonical link: https://commits.webkit.org/191409@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219596 268f45cc-cd09-0410-ab3c-d52691b4dbfc